--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+
+
+Equipe : Protectors of the Earth
+
+Les sources de ce challenge, reste la propriété de développeurs.
+
+
 Krzysztof Dudek
 Richard La roze
 Odran PHILIBERT
